--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,13 +19,14 @@ jobs:
     - name: npm install and build webpack
       run: |
         npm install
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
+        npm run build
+    - uses: actions/upload-artifact@master
+      with:
+        name: webpack artifacts
+        path: public/
   
+  test:
     needs: build
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -35,13 +36,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-    - uses: actions/download-artifact@master
+    - uses: actions/download-artifact@master      
       with:
         name: webpack artifacts
         path: public
-    - name: npm install, and test
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
       run: |
